--- a/blog/package.json
+++ b/blog/package.json
@@ -9,7 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.3",
-    "bootstrap": "^5.3.8"
+    "@astrojs/mdx": "^4.3.7",
+    "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.6.0",
+    "astro": "^5.14.4",
+    "sharp": "^0.34.3"
   }
 }
